<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Page-Turner Books</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="toast_error_inserting_dummy_data">Error while inserting dummy data book info</string>
    <string name="toast_success_inserting_dummy_data">Dummy book info inserted with row id: </string>

    <string name="toast_error_saving">Error while saving book info</string>
    <string name="toast_success_saving">Book info saved with row id: </string>

    <!--<string name="contents_of_database_table">The bookstore table contains: %$d books</string>-->
    <string name="contents_of_database_table">The bookstore table contains: <xliff:g exemple="4" id="books_in_table_of_contents"> </xliff:g> </string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for genre information in the editor [CHAR LIMIT=30] -->
    <string name="category_genre">Genre</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_specs">Specifications</string>

    <!-- Text hint for author field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_author">Author</string>

    <!-- Text hint for title field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for description field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_description">Description</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for number of books in stock [CHAR LIMIT=5]-->
    <string name="hint_books_quantity_in_stock">Quantity in stock</string>

    <string name="hint_book_publisher">Name of Publisher</string>

    <string name="edit_book_publisher_phone">Phone number of Publisher</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_number_of_pages">Number of pages</string>

    <!-- Units for the object (kilograms/kilometers, number of pages, etc) [CHAR LIMIT=5] -->
    <string name="unit_book_pages">pages</string>

    <!-- Labels for dropdown menu option if the book's genre is unknown [CHAR LIMIT=20] -->
    <string name="genre_unknown">Unknown</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_fiction">Fiction</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_satire">Satire</string>
    <string name="genre_horror">Horror</string>

</resources>
