<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_author"
                android:inputType="textCapWords" />
            <!-- Title field -->
            <EditText
                android:id="@+id/edit_book_title"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <!-- Description field -->
            <EditText
                android:id="@+id/edit_book_description"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_description"
                android:inputType="textCapWords" />
            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <!-- Number in stock field -->
            <EditText
                android:id="@+id/edit_book_number_in_stock"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_books_in_stock"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_book_publisher"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_publisher"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_publisher_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/edit_book_publisher_phone"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Genre category -->
    <LinearLayout
        android:id="@+id/container_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_genre"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Genre drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_specs"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Pages field -->
            <EditText
                android:id="@+id/edit_book_pages"
                android:hint="@string/hint_book_number_of_pages"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for total pages -->
            <TextView
                android:id="@+id/label_pages_units"
                android:text="@string/unit_book_pages"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
